welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value newArray
  var T = newArray[Color](getMondeHauteur())
          ^Array2:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
      setCouleurBrosse((k+decalage)%getMondeHauteur)
                                   ^